# fish_reader

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml
src/: app.rs  config.rs  event.rs  main.rs  model.rs  state.rs
src/app/: bookmark.rs  library_ops.rs  mod.rs  search.rs  sync_ops.rs
src/event/: bookmark.rs  bookshelf.rs  chapter_list.rs  mod.rs  reader.rs  search.rs  settings.rs
src/model/: chapter_parser.rs  library.rs  mod.rs  novel.rs
src/sync/: config.rs  metadata.rs  mod.rs  sync_engine.rs  webdav_client.rs
src/sync/sync_engine/: diff.rs  io.rs  merge.rs  mod.rs
src/ui/: bookmark.rs  bookshelf.rs  chapter_list.rs  conflict_dialog.rs  mod.rs  reader.rs  search.rs  settings.rs  sync_status.rs  utils.rs
