[package]
name = "fish_reader"
version = "0.4.2"
edition = "2024"
authors = ["haukuen"]
description = "A terminal-based novel reader with bookshelf management"
license = "MIT"
repository = "https://github.com/haukuen/fish_reader"
keywords = ["terminal", "reader", "novel", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "fr"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.9", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
ratatui = { version = "0.29.0", features = ["crossterm"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
unicode-width = "0.2.0"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
tempfile = "3.20.0"
