[package]
name = "fish_reader"
version = "0.6.0"
edition = "2024"
authors = ["haukuen"]
description = "A terminal-based novel reader with bookshelf management"
license = "MIT"
repository = "https://github.com/haukuen/fish_reader"
keywords = ["terminal", "reader", "novel", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "fr"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.37", features = ["derive"] }
crossterm = "0.29.0"
home = "0.5.12"
ratatui = { version = "0.30.0", features = ["crossterm"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
unicode-width = "0.2.2"
anyhow = "1.0.98"
chrono = "0.4"
clap = { version = "4.5.9", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
ratatui = { version = "0.29.0", features = ["crossterm"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
unicode-width = "0.2.0"
walkdir = "2.5"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
tempfile = "3.24.0"
