[package]
name = "fish_reader"
version = "0.7.1"
edition = "2024"
authors = ["haukuen"]
description = "A terminal-based novel reader with bookshelf management"
license = "MIT"
repository = "https://github.com/haukuen/fish_reader"
keywords = ["terminal", "reader", "novel", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "fr"
path = "src/main.rs"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.37", features = ["derive"] }
crossterm = "0.29.0"
home = "0.5.12"
ratatui = { version = "0.30.0", features = ["crossterm"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
unicode-width = "0.2.2"
reqwest = { version = "0.12", features = ["blocking"] }
walkdir = "2.5"
crc32fast = "1.4"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
tempfile = "3.24.0"
